ISS-11-17-46 Fixed spacing between elements

--- a/styles/request-for-starterkit.css
+++ b/styles/request-for-starterkit.css
@@ -201,3 +201,9 @@
         margin-bottom: 50px;
     }
 }
+
+@media (min-width: 1024px) and (max-width: 9999px) {
+    [data-module=PageSubnav] .pagesubnavcntr span>button {
+        margin-right: 46px;
+    }
+}
